tests/fail/alias_generic_test.stderr
error[E0408]: Cannot convert type 'GenericNode_M_i32 (assign)' to 'StrongNode#'
 --> tests/fail/alias_generic_test.tk:25:8
   |
 25 |     s1 = s2 // EXPECT: error[E0408]: Cannot convert type
   |        ^
